fix error line wrap kalo abis edit comment, fix tulisan edited muncul terus
penyebabnya karena updatenya itu kan auto jadi ya gitu... mestinya specify satu kolom aja untuk pas view/like/comment

--- a/sehat_in/static/css/forum_page.css
+++ b/sehat_in/static/css/forum_page.css
@@ -52,6 +52,7 @@
 
 .isi_forum {
     padding: 1rem 0;
+    overflow-wrap: break-word;
 }
 
 .comment__action {
